# mcp-pagure

./: README.md  mcp-pagure.service  pyproject.toml
src/pagure/: __init__.py  client.py  models.py  server.py
